Completed revisions to address and copyright

--- a/Current Build/news-bedbug-elimination.html
+++ b/Current Build/news-bedbug-elimination.html
@@ -189,14 +189,14 @@ var __adobewebfontsappname__ = "muse";
      <div class="clearfix grpelem" id="u241"><!-- group -->
       <div class="grpelem" id="u4525"><!-- custom html -->
        
-<iframe class="actAsDiv" width="200" height="180" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;q=2825%20Exchange%20Blvd%2C%20Suite%20104%20Southlake%2C%20Texas%2076092&amp;aq=0&amp;ie=UTF8&amp;t=m&amp;z=12&amp;iwloc= &amp;output=embed"></iframe>
+<iframe class="actAsDiv"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.1928725280254!2d-97.1219790848451!3d32.94591688092138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864dd4937d804ec5%3A0x622fb7f75d8cab55!2s485+Cherry+Ln%2C+Southlake%2C+TX+76092!5e0!3m2!1sen!2sus!4v1465235180705" width="200" height="180" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </div>
      </div>
      <div class="clearfix grpelem" id="u3807"><!-- group -->
       <div class="clearfix grpelem" id="u3810-13"><!-- content -->
        <p id="u3810-2">MAIN OFFICE:</p>
-       <p id="u3810-4">2825 Exchange Blvd, Suite 104 Southlake, Texas 76092</p>
+       <p id="u3810-4">485 Cherry Ln, Southlake, Texas 76092</p>
        <p id="u3810-6">817.310.3525</p>
        <p id="u3810-7">&nbsp;</p>
        <p id="u3810-9">ALL SERVICE CENTERS:</p>
@@ -250,7 +250,7 @@ var __adobewebfontsappname__ = "muse";
      <div class="grpelem" id="u8008"><!-- simple frame --></div>
     </div>
     <div class="clearfix colelem" id="u4359-6"><!-- content -->
-     <p>©2015 Versacor Enterprises, LLC • All Rights Reserved • 120115 • Site built &amp; managed by <a class="nonblock" href="http://www.bluecrabmarketing.com">Bluecrab Marketing</a></p>
+     <p>©2016 Versacor Enterprises, LLC • All Rights Reserved • 6/6/16</p>
     </div>
     <div class="browser_width colelem" id="u4289-bw">
      <div id="u4289"><!-- simple frame --></div>
